INCLUDES = -I$(top_srcdir)/src/ascent-logonserver \
   -I$(top_srcdir)/src/ascent-realmserver -I$(top_srcdir)/src/ascent-shared -I$(top_srcdir)/src/ascent-voicechat \
   -I$(top_srcdir)/src/ascent-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libDarkmoonFaire.la

libDarkmoonFaire_la_SOURCES = ActiveCarnies.cpp \
Burth.cpp \
Flik.cpp \
FlikFrog.cpp \
GevasGrimegate.cpp \
Lhara.cpp \
MaximaBlastenheimer.cpp \
Morja.cpp \
ProfessorThaddeusPaleo.cpp \
Sayge.cpp \
SelinaDourman.cpp \
SilasDarkmoon.cpp \
StampThunderhorn.cpp \
Sylannia.cpp \
Setup.cpp